aligning was fixed

--- a/src/styles/top_article.scss
+++ b/src/styles/top_article.scss
@@ -212,7 +212,7 @@
   .top_article__paragraph {
     margin-left: 25px;
     font-size: 16px;
-    line-height: 25px;
+    line-height: 24px;
     margin-bottom: 30px;
     max-width: 270px;
   }
